# rp2040-wm8960

./: .gitmodules  CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/hello-world/: CMakeLists.txt  README.md
apps/hello-world/src/: main.c
apps/usb-sound-card/: CMakeLists.txt  README.md
apps/usb-sound-card/src/: main.c
apps/usb-sound-card/src/lufa/: AudioClassCommon.h  StdDescriptors.h
libs/: CMakeLists.txt
libs/rp2040-i2c-wm8960/: CMakeLists.txt
libs/rp2040-i2c-wm8960/src/: wm8960-i2c.c
libs/rp2040-i2c-wm8960/src/include/: wm8960-i2c.h
